tests/110_prefix_invalid_operand.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/110_prefix_invalid_operand.pirx:3:5: invalid operand for prefix ++: 5
Error: exit status 1
