tests/110_prefix_invalid_operand.pirx
// Prefix ++ requires an assignable operand.
func main(): int {
  ++5;
  return 0;
}
